# Rust-Command-Line-Tool

./: Cargo.toml  README.md  kenpom.csv  kenpom.db
src/: lib.rs  main.rs
