[package]
name = "kenpoms_analysis"
version = "0.1.0"
authors = ["Matthew Holden"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
env_logger = "0.10.0"
log = "0.4.20"
rusqlite = "0.29.0"
clap = { version = "4.3.4", features = ["derive"] }

[lib]
name = "kenpoms_analysis"
path = "src/lib.rs"